[package]
name = "rust_gui_project"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui_extras =  { version = "0.28.1", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.207"
